--- a/.gitlab-ci-vars.yml
+++ b/.gitlab-ci-vars.yml
@@ -1,19 +1,21 @@
 # Includes .gitlab-ci.yml-vars
 
 variables:
-  CI_REGISTRY_IMAGE: 'mikrotik-alp_rc_nginx_php82'
+  CI_REGISTRY_IMAGE: 'mikrotik-alp_rc_nginx_php82'    # name of docker hub image-registry
   
-  DIND_TAG: 'docker:27.1.2-dind'
+  DIND_TAG: 'docker:27.2.0-dind'                      # usable DinD-image
 
-  CI_PRODUCTION_LATEST_SWITCH: 'true' 
-  CI_PRODUCTION_VERSION_SWITCH: 'true'
+  CI_PRODUCTION_LATEST_SWITCH: 'true'  # switch to build PRODUCTION-version & LATEST-PRODUCTION-version
+  CI_PRODUCTION_VERSION_SWITCH: 'true' # switch to build PRODUCTION-version
+  # When both switches are off => build only DEVEL-version
 
-  CI_LINUX_VERSION: 'v3.19.3'
-  CI_IMAGE_VERSION: '1.1.1'
-  CI_DEVEL_VERSION: '1.1.1'
-  CI_IMAGE_DEVEL: 'devel'
-  CI_IMAGE_LATEST: 'latest'
-  CI_COMMIT_DEVEL: "$CI_LINUX_VERSION-$CI_IMAGE_DEVEL-$CI_DEVEL_VERSION"
-  CI_COMMIT_LATEST: "$CI_IMAGE_LATEST"
-  CI_COMMIT_LATEST_LONG: "$CI_LINUX_VERSION-$CI_IMAGE_LATEST"
-  CI_COMMIT_VERSION: "$CI_LINUX_VERSION-$CI_IMAGE_VERSION"
+  CI_LINUX_VERSION: 'v3.19.4'        # left part of version  
+  CI_ALPINE_VERSION: 'alpine:3.19.4' # used for base-image selection
+  CI_PROD_VERSION: '2.0.0'           # right part of version (for PRODUCTION-version)
+  CI_DEVEL_VERSION: '2.0.0'          # right part of version (for DEVEL-version)
+  CI_IMAGE_DEVEL: 'devel'            # naming part for image (DEVEL-version)
+  CI_IMAGE_LATEST: 'latest'          # naming part for image (LATEST-PRODUCTION-VERSION)
+  CI_COMMIT_DEVEL: "$CI_LINUX_VERSION-$CI_IMAGE_DEVEL-$CI_DEVEL_VERSION" # image naming (DEVEL-version)
+  CI_COMMIT_LATEST: "$CI_IMAGE_LATEST"                                   # image naming (LATEST-PRODUCTION-version) 
+  CI_COMMIT_LATEST_LONG: "$CI_LINUX_VERSION-$CI_IMAGE_LATEST"            # image long naming (LATEST-PRODUCTION-version) 
+  CI_COMMIT_VERSION: "$CI_LINUX_VERSION-$CI_PROD_VERSION"                # image naming (PRODUCTION-version)
